samples/_failures_safe/1761482162_6b2715_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdb78235.c: In function ‘main’:
./samples/SAFE/__tmp_fdb78235.c:165:18: error: ‘Matrix’ has no member named ‘col’; did you mean ‘cols’?
  165 |             mat2.col
      |                  ^~~
      |                  cols
./samples/SAFE/__tmp_fdb78235.c:165:21: error: expected ‘;’ at end of input
  165 |             mat2.col
      |                     ^
      |                     ;
./samples/SAFE/__tmp_fdb78235.c:165:13: error: expected declaration or statement at end of input
  165 |             mat2.col
      |             ^~~~
./samples/SAFE/__tmp_fdb78235.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fdb78235.c:165:13: error: expected declaration or statement at end of input
